// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FilterArea rendering renders expected elements 1`] = `
<ul
  className="FilterArea"
>
  <li />
</ul>
`;

exports[`FilterArea rendering renders expected elements when optional properties are set 1`] = `
<ul
  className="FilterArea TestClass"
>
  <li />
</ul>
`;
